--- a/employee_management_system/src/main/resources/templates/employeePage.html
+++ b/employee_management_system/src/main/resources/templates/employeePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="ISO-8859-1">
 <meta name="viewport"
@@ -10,16 +11,16 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" 
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" 
-		crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+	integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+	crossorigin="anonymous"></script>
 
 <script>
-setInterval(function () {
-	$.get("currentcount", function( results ) {
-		$( "#count" ).html( results );
-	});
-}, 3000);
+	setInterval(function() {
+		$.get("currentcount", function(results) {
+			$("#count").html(results);
+		});
+	}, 3000);
 </script>
 </head>
 <body>
@@ -27,16 +28,22 @@ setInterval(function () {
 
 		<h3>Employee List</h3>
 		<hr>
+		<div>
+			User: <span sec:authentication="name"></span> <br> Role(s): <span
+				sec:authentication="principal.authorities"></span> <br>
+			<br>
+		</div>
 		<a th:href="@{/employees/showAddForm}"
-			class="btn btn-primary btn-sm mb-3 float right">Add Employee</a>
-		<a th:href="@{/employees/listAll}"
+			class="btn btn-primary btn-sm mb-3 float right">Add Employee</a> <a
+			th:href="@{/employees/listAll}"
 			class="btn btn-success btn-sm mb-3 float right">Refresh Page</a>
-		<form action="#" th:action="@{/employees/findByDepartment}" method="GET">
-				<input type="text" name="department" class="form-control mb-4 col-4"
-					placeholder="Search by Department" />
-				<input type="submit"value="Search" class="btn btn-primary btn-sm mb-3" />
-			</form>
-		
+		<form action="#" th:action="@{/employees/findByDepartment}"
+			method="GET">
+			<input type="text" name="department" class="form-control mb-4 col-4"
+				placeholder="Search by Department" /> <input type="submit"
+				value="Search" class="btn btn-primary btn-sm mb-3" />
+		</form>
+
 		<table style="width: 80%" border="1"
 			class="table table-striped table-responsive-md table-hover">
 			<thead class="thead-dark">
@@ -46,7 +53,9 @@ setInterval(function () {
 					<th>Email</th>
 					<th>Department</th>
 					<th>Salary</th>
-					<th>Action</th>
+					<div sec:authorize="hasAnyRole('ROLE_MANAGER', 'ROLE_ADMIN')">
+						<th>Action</th>
+					</div>
 				</tr>
 			</thead>
 			<tbody>
@@ -56,18 +65,37 @@ setInterval(function () {
 					<td th:text="${employee.email}"></td>
 					<td th:text="${employee.department}"></td>
 					<td th:text="${employee.salary}"></td>
-					<td><a th:href="@{/employees/showFormForUpdate(employeeId=${employee.empId})}"
-						class="btn btn-primary">Update</a>
-						<a th:href="@{/employees/deleteEmployee(employeeId=${employee.empId})}"
-						class="btn btn-danger" 
-						onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">Delete</a>
-					</td>
+					<div sec:authorize="hasAnyRole('ROLE_MANAGER', 'ROLE_ADMIN')">
+						<td>
+							<div sec:authorize="hasAnyRole('ROLE_MANAGER', 'ROLE_ADMIN')">
+								<a
+									th:href="@{/employees/showFormForUpdate(employeeId=${employee.empId})}"
+									class="btn btn-primary">Update</a>
+							</div>
+							<div sec:authorize="hasRole('ROLE_ADMIN')">
+								<a
+									th:href="@{/employees/deleteEmployee(employeeId=${employee.empId})}"
+									class="btn btn-danger"
+									onclick="if (!(confirm('Are you sure you want to delete this employee?'))) return false">Delete</a>
+							</div>
+						</td>
+					</div>
 				</tr>
 			</tbody>
 		</table>
 		<div id="pageCountDiv">
-			<h6>Visitors Count <span id="count" class="badge badge-dark"  th:text="${currentPageCount}"></span></h6>
+			<h6>
+				Visitors Count <span id="count" class="badge badge-dark"
+					th:text="${currentPageCount}"></span>
+			</h6>
 		</div>
+		<!-- Add a logout button -->
+		<form action="#" th:action="@{/logout}" method="POST">
+
+			<input type="submit" value="Logout"
+				class="btn btn-outline-primary mt-2" />
+
+		</form>
 	</div>
 </body>
 </html>
